<resources>
    <string name="app_name">IDF - NGO</string>
    <string name="label">INTEGRATED DEVELOPMENT FOUNDATION</string>
    <string name="para_1">Founded in 1993 by a group of young social development professionals, Integrated Development Foundation (IDF) is a Patna-based NGO advocating for social change, with field offices in Bihar and Jharkhand.</string>
    <string name="para_2_a">Our vision is an egalitarian society in which all community members can realize their right to a life of quality and dignity. This vision is guided by three operating principles: building local capacity, strengthening community institutions, and fostering community-based leadership. Our key strategies for creating sustainable rural development are using a rights-based approach and leveraging women empowerment. IDF projects are supported by UN agencies, national and international funders, and state governments. IDF is also the lead member of several state and regional NGO networks.</string>
    <string name="para_2_b">IDFs mission is to ensure better health, security, and well-being for the poorest and most deprived members of rural communities.</string>
    <string name="address">
        Integrated Development Foundation
        101,103 Yashoda Apartment
        Panchwati  Colony (Rd # 23)
        Lane  in Front of Women ITI
        Digha Ghat,  Patna - 800011</string>
    <string name="phone">Mob: +91-7463938897, 9835400525</string>
    <string name="email">Email: idfho@idfngo.org</string>
    <string name="accredited_by">ACCREDITED BY:</string>
    <string name="click_here_to_visit_us" style="text-decoration:none;">

        <a href="http://idfngo.org/">CLICK HERE TO VISIT US</a></string>
    <string name="contact_us">CONTACT US:</string>
</resources>
