<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.github.shashank7200.idf.MainActivity">

    <TextView
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="80sp"
        android:background="@color/backgroundColor"/>

<ImageView
    android:id="@+id/idf_logo"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/idf_logo"
    android:layout_alignParentTop="true"
    android:layout_alignParentLeft="true"
    android:layout_margin="8sp"/>

    <TextView
        android:id="@+id/slogan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/idf_logo"
        android:text="Empowering communities Transforming lives"
        android:layout_marginTop="24sp"
        android:textSize="14sp"
        android:textColor="@color/baseColor"
        android:textAlignment="center"
        android:textStyle="italic"
        android:fontFamily="Roboto"/>

    <TextView
        android:id="@+id/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/container"
        android:text="@string/label"
        android:layout_marginTop="16sp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        android:textColor="@color/baseColor"/>

    <ViewFlipper
        android:layout_width="match_parent"
        android:layout_height="200sp"
        android:layout_marginTop="14dp"
        android:id="@+id/viewFlipper"
        android:layout_below="@+id/label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

    </ViewFlipper>

    <LinearLayout
        android:id="@+id/visit_us"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8sp"
        android:background="@color/backgroundColor"
        android:orientation="horizontal"
        android:layout_below="@id/viewFlipper">

        <TextView
            android:id="@+id/visit_link"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/baseColor"
            android:text="@string/click_here_to_visit_us"
            android:textSize="19sp"/>

        <ImageView
            android:id="@+id/visit_image"
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:src="@drawable/visit_us"/>

    </LinearLayout>

    <TextView
        android:id="@+id/para_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:text="@string/para_1"
        android:layout_below="@id/visit_us"
        android:layout_margin="10sp"/>

    <TextView
        android:id="@+id/para_2_b"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/para_2_b"
        android:layout_below="@id/para_1"
        android:layout_margin="10sp"
        android:textColor="#000"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/backgroundColor"
    android:layout_below="@id/para_2_b"
    android:orientation="vertical"
    android:layout_margin="10sp"
    android:id="@+id/info">

    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ADDRESS:"
        android:textStyle="bold"
        android:layout_margin="8sp"
        android:textColor="@color/baseColor"/>
    <TextView
        android:id="@+id/address_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:padding="8sp"
        android:textColor="@color/baseColor"/>

    <TextView
        android:id="@+id/operation_hours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/address_description"
        android:text="@string/contact_us"
        android:textStyle="bold"
        android:layout_margin="8sp"
        android:textColor="@color/baseColor"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8sp"
        android:text="@string/phone"/>
    <TextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_margin="8sp"
        android:textColor="@color/baseColor"/>


</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/info"
        android:background="@color/footerColor">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/accredited_by"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textColor="#fff"
            android:layout_margin="10sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp">

        <ImageView
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:src="@drawable/credibility_alliance"/>

        <ImageView
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/give_india"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>

</ScrollView>